--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -3,10 +3,30 @@ html, body, .container-fluid {
     height:100%;
     background-color: black;
 }
-
 .container-fluid {
     width: 100%;
     box-sizing: border-box;
+}
+
+.modal-title{
+    color: #e9ecef; 
+}
+
+.modal-content{
+    background-color: black;
+}
+
+.carousel-img{
+    height: 250px;
+    width: 250px;
+    margin: 0 auto;
+}
+.carousel-caption{
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left:0;
+    padding-bottom: 40px;
 }
 
 #mainRow, #leftPanel, #rightPanel{
@@ -27,6 +47,7 @@ path.spiral {
     stroke: #000000;
     stroke-width: 3px;
 }
+
 
 
 /*Test display with specific colors*/
