--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -36,6 +36,13 @@ nav{
     padding-bottom: 40px;
 }
 
+.grid-img{
+    height: 50px;
+    width: 50px;
+    margin: 2px 2px;
+}
+
+
 
 #mainRow, #leftPanel, #rightPanel{
     height: 100%;
@@ -62,7 +69,7 @@ path.spiral {
     top:60px;
     background-color: yellow;
     width: 150px;
-    height: 50px; 
+    height: 50px;
 }
 
 
@@ -82,6 +89,7 @@ path.spiral {
 
 .tooltip{
     opacity: 1;
+    z-index: 100;
 }
 
 
