--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -71,7 +71,7 @@ path.spiral {
 
 #teamSlider{
     height: 80%;
-    margin-top: 10%;
+    margin-top: 8%;
     position: absolute;
     right: 5px;
 }
@@ -92,13 +92,14 @@ path.spiral {
     width:100%;
     height:100vh;
     overflow: hidden;
-    white-space:nowrap;
+    /*white-space:nowrap;*/
 }
 
 .left, .right{
     float:left;
-    display: inline-block;
+    /*display: inline-block;*/
     width:49.5%;
+    height:100%;
     position:relative;
 }
 
