--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -48,6 +48,12 @@ nav{
 }
 
 #rightPanel, #leftPanel{
+
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: #28a745;
+    background: #111111;
     height: 300px;
     width: 400px;
     position: absolute;
@@ -57,6 +63,7 @@ nav{
 }
 
 .active{
+    border-style: none !important; 
     top: 0px !important;
     height: 100% !important;
     width: 100% !important;
@@ -108,9 +115,8 @@ path.spiral {
 }
 
 .panels .left{
-    background: green;
 }
 
 .panels .right{
-    background: blue;
+    background: #0000;
 }
