--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -85,11 +85,12 @@ path.spiral {
 
 #teamName{
     position: absolute;
-    left:10px;
-    top:60px;
-    background-color: yellow;
-    width: 150px;
-    height: 50px;
+    color: #fff;
+    left:20px;
+    top:64px;
+    width: 300px;
+    height: auto;
+    z-index: 100;
 }
 
 #timeSlider{
