change right/left panel fixed size to %

--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -54,8 +54,10 @@ nav{
     border-radius: 5px;
     border-color: #28a745;
     background: #111111;
-    height: 300px;
-    width: 400px;
+    /*height: 300px;
+    width: 400px;*/
+    height: 40%;
+    width: 20%;
     position: absolute;
     top: 54px;
     right: 0px;
