Arc chart functional (not finished)
Still needs :
- Animation
- Arc Labels
- Normalization of data

--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -124,10 +124,12 @@ path.spiral {
     background: #0000;
 }
 
+
 /* BAR CHARTS */
 path.arc {
   opacity: 0.9;
   transition: opacity 0.5s;
+  fill: blue;
 }
 
 path.arc:hover {
