--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -113,6 +113,30 @@ path.spiral {
     z-index: 100;
 }
 
+.playButton, .pauseButton {
+    width: 50px;
+    height:50px;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    z-index: 100;
+    border-radius: 50%;
+    background-size: 40px 40px;
+    background-position: center;
+}
+.playButton{
+    background-image: url("images/playGreen.png");
+}
+.playButton:hover{
+    background-image: url("images/playWhite.png");
+}
+.pauseButton{
+    background-image: url("images/pauseGreen.png");
+}
+.pauseButton:hover{
+    background-image: url("images/pauseWhite.png");
+}
+
 .tooltip{
     opacity: 1;
     z-index: 100;
