--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -62,6 +62,7 @@ nav{
     top: 54px;
     right: 0px;
     z-index: 99;
+    background-image: url("images/nhl-background.jpg");
 }
 
 .activePanel{
