--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -97,7 +97,7 @@ path.spiral {
     stroke-width: 0.25%;
       }
 
-#teamName{
+#teamName, #teamVersus{
     position: absolute;
     color: #fff;
     left:20px;
@@ -105,6 +105,11 @@ path.spiral {
     width: 300px;
     height: auto;
     z-index: 100;
+    display: none;
+    text-align: center;
+}
+.activeTool{
+    display: block !important;
 }
 
 #timeSlider{
