--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -120,6 +120,24 @@ path.spiral {
     z-index: 100;
 }
 
+.slider-selection{
+    background-image: none;
+}
+
+.slider-track{
+    background-color: rgba(0, 0, 0, 0.3);
+    background-image: none;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #28a745;
+}
+
+.slider-handle{
+    background-color: #28a745;
+    background-image: none;
+}
+
 .playButton, .pauseButton {
     width: 50px;
     height:50px;
