--- a/css/nhlInspector.css
+++ b/css/nhlInspector.css
@@ -2,6 +2,8 @@
 html, body, .container-fluid {
     height:100%;
     background-color: black;
+    background-image: url("images/nhl-background.jpg");
+
 }
 nav{
     position: fixed !important;
@@ -71,7 +73,6 @@ nav{
 
 
 #rightPanel, #leftPanel{
-
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
@@ -79,8 +80,8 @@ nav{
     background: #111111;
     background-image: url("images/nhl-background.jpg");
     background-position: center;
-    height: 40%;
-    width: 20%;
+    height: 50%;
+    width: 30%;
     position: absolute;
     top: 57px;
     right: 0px;
@@ -92,6 +93,7 @@ nav{
     top: 0px !important;
     height: 100% !important;
     width: 100% !important;
+    margin-right: 10% !important;
     z-index: 0 !important;
 }
 
